--- a/Arquivo_Python/analise_aneel.ipynb
+++ b/Arquivo_Python/analise_aneel.ipynb
@@ -8944,7 +8944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "id": "11388d3a",
    "metadata": {},
    "outputs": [
@@ -9055,6 +9055,7 @@
     }
    ],
    "source": [
+    "# Análise por Região\n",
     "# Seleciona todas as linhas e todas as colunas, exceto 'qtd_unidades'\n",
     "reg_pot = maturidade_regiao.loc[:, maturidade_regiao.columns != 'qtd_modalidades']\n",
     "reg_pot = reg_pot.sort_values('potencia_total', ascending=False)\n",
@@ -9086,11 +9087,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "id": "96011b84",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Análise por estado\n",
     "uf_pot = maturidade_estado.loc[:, maturidade_estado.columns != 'qtd_modalidades'].sort_values('potencia_total', ascending=False)\n",
     "uf_pot = uf_pot.head(10)"
    ]
@@ -9269,7 +9271,7 @@
    "id": "7821b6f0",
    "metadata": {},
    "source": [
-    "Temos que a região com maior crescimento anual é o Nordeste, onde começou com a instalação de 6 kW e um crescimento médio anual de 6,33%."
+    "Temos que a região com maior evolução anual é o Nordeste, onde começou com a instalação de 6 kW e um crescimento médio anual de 6,33%."
    ]
   },
   {
@@ -9762,6 +9764,7 @@
     }
    ],
    "source": [
+    "# Gráfico evolutivo da aderÊncia anual do tipos de consumidores: PF e PJ\n",
     "plt.figure()\n",
     "for tipo in evo_pf_pj['Tipo_consumidor'].unique():\n",
     "    subset = evo_pf_pj[evo_pf_pj['Tipo_consumidor'] == tipo]\n",
@@ -9778,7 +9781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "id": "87f7bb61",
    "metadata": {},
    "outputs": [
@@ -9834,6 +9837,7 @@
     }
    ],
    "source": [
+    "# Média do crescimento percentual anual\n",
     "media_pf_pj = evo_pf_pj.groupby('Tipo_consumidor')['Aumento_kW(%)'].mean().reset_index().rename(columns={'Aumento_kW(%)' : 'Aumento_medio_anual(%)'})\n",
     "media_pf_pj"
    ]
@@ -9885,7 +9889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "0d89cfdd",
    "metadata": {},
    "outputs": [
@@ -9983,6 +9987,7 @@
     }
    ],
    "source": [
+    "# Aumento médio percentual da aderência baseado na classe de consumidor (tipo de imóvel)\n",
     "med_pot_ano = clas_ano.groupby('Classe_consumidor')['Aumento_potencia(%)'].mean().reset_index().rename(columns={'Aumento_potencia(%)' : 'Aumento_media_potencia_anual(%)'})\n",
     "\n",
     "med_pot_ano"
@@ -10047,7 +10052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "id": "93bb4415",
    "metadata": {},
    "outputs": [
@@ -10490,9 +10495,9 @@
    ],
    "source": [
     "# Participação anual por estado e Ano\n",
-    "# transform auxilia a fazer a soma por grupo\n",
     "\n",
-    "evol_uf['pot_ano(%)'] = (evol_uf['kW'] / evol_uf.groupby('Ano')['kW'].transform('sum')) *100\n",
+    "evol_uf['pot_ano(%)'] = (evol_uf['kW'] / evol_uf.groupby('Ano')['kW'].transform('sum')) *100 # transform auxilia a fazer a soma por grupo\n",
+    "\n",
     "\n",
     "\n",
     "evol_uf.head(30)"
@@ -10500,7 +10505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "id": "537a7ef1",
    "metadata": {},
    "outputs": [
@@ -10646,6 +10651,7 @@
     }
    ],
    "source": [
+    "# Aplicando a fórmula de Índice de Herfindahl-Hirschman (HHI) no agrupamento anual\n",
     "hhi = evol_uf.groupby('Ano')['pot_ano(%)'].apply(lambda x: (x**2).sum()).reset_index(name='hhi')\n",
     "\n",
     "hhi"
@@ -10696,7 +10702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "b37d7d2c",
    "metadata": {},
    "outputs": [
@@ -10710,6 +10716,7 @@
     }
    ],
    "source": [
+    "# Verificando a centralização do mercado nos anos de 2009 e 2025\n",
     "hhi_inicio = hhi.iloc[0]['hhi']\n",
     "hhi_fim = hhi.iloc[-1]['hhi']\n",
     "\n",
@@ -11969,6 +11976,86 @@
    "metadata": {},
    "source": [
     "Esses estados apresentam condições recentes compatíveis com expansão futura, percebendo que os estados com maiores condições são da região Norte e Nordeste"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "050c1272",
+   "metadata": {},
+   "source": [
+    "# Conclusão e Recomendação"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19991da2",
+   "metadata": {},
+   "source": [
+    "\n",
+    "* Há uma dominância da energia solar, enquanto há pouco investimento nas demais escolhas.\n",
+    "\n",
+    "* O volume de investimento é liderado por Pessoas Físicas, que corresponde a aproximadamente 65% da potência total instalada.\n",
+    "\n",
+    "* A região Sudeste lidera o rank com maior capacidade instalada.\n",
+    "\n",
+    "*  A \"Geração na própria Unidade Consumidora\" é a modalidade mais madura, mas o Autoconsumo Remoto já demonstra uma fatia significativa de mercado, indicando uma descentralização da geração.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "943bcd40",
+   "metadata": {},
+   "source": [
+    "## Recomendações:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b491164",
+   "metadata": {},
+   "source": [
+    "\n",
+    "* Empresas de instalação devem priorizar o seguimento PJ(Pessoa Jurídica), dado sua representatividade financeira e possibilidade maior da potência média.\n",
+    "\n",
+    "* Municípios com alta incidência solar e baixa densidade de usinas, representam uma nova frente de vendas, especialmente fora do eixo Minas-São Paulo.\n",
+    "\n",
+    "* O alto volume de conexões residiciais exige um maior monitoramente das distribuidoras para evitar sobrecargas, abrindo espaço para soluções de armazenamento de energia.\n",
+    "\n",
+    "* Focar em nichos de segmentos emergentes como instalação em Condomínos, modelo pouco explorado.\n",
+    "\n",
+    "* Criar políticas diferenciadas para Norte e Nordeste (menor poder aquisitivo, maior potencial solar).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4199d2c",
+   "metadata": {},
+   "source": [
+    "# Possíveis escolhas para análise mais aprofundada"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "029d8f46",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Para uma análise mais profunda e detalhada seria ideal algumas informações:\n",
+    "\n",
+    "* Estimar tempo de retorno do investimento por estado (considerando insolação + tarifa local)\n",
+    "\n",
+    "* Cruzar tarifas de energia por distribuidora com velocidade de adoção da GD.\n",
+    "\n",
+    "* Conseguir informações se há incentivos regionais para aderir às energias renováveis.\n",
+    "\n",
+    "* Entender se há uma relação entre o PIB regional e a utilização de fontes renováveis.\n",
+    "\n",
+    "* Fazer uma análise sobre fatores externos, como pandemia, influenciaram a aderência da transição energética.\n",
+    "\n",
+    "* Criar modelos temporais para estimar o crescimento da geração nos próximos dois anos.\n",
+    "\n",
+    "* Entender se algo influencia a pouca aderência da região Norte ao implementar as fontes renováveis."
    ]
   }
  ],
